--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,34 @@
 	font-weight: 900;
 	src: url("whitney/whitney-black.otf") format("opentype");
 }
+/* Add a black background color to the top navigation */
+.topnav {
+	background-color: #000;
+	overflow: hidden;
+}
 
+/* Style the links inside the navigation bar */
+.topnav a {
+	background-color: #111;
+	float: left;
+	color: #fff;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+	background-color: #222;
+	color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+	background-color: DodgerBlue;
+	color: white;
+}
 .button {
 	font-family: whitney;
 	font-weight: 500;
