--- a/public/style.css
+++ b/public/style.css
@@ -44,11 +44,18 @@
 	text-decoration: none;
 	font-size: 17px;
 }
-
+.topnav a.right {
+	background-color: #111;
+	float: right;
+	color: #fff;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
 /* Change the color of links on hover */
 .topnav a:hover {
 	background-color: #222;
-	color: black;
 }
 
 /* Add a color to the active/current link */
