--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,8 @@
 	background-color: white;
 	color: black;
 	padding: 30px;
-	height: 200px;
+	height: 120px;
+	cursor: pointer;
 }
 
 /* Add a black background color to the top navigation */
