--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,10 @@
 
 .pub {
 	width: 100%;
-	margin: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
 	background-color: white;
 	color: black;
 	padding: 30px;
