--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@
 
 .pub {
 	width: 100%;
-	background-color: white;
+	background-color: #ea0000;
 	margin-top: 20px;
 	color: black;
 	padding: 30px;
