--- a/public/style.css
+++ b/public/style.css
@@ -43,6 +43,15 @@
 	width: 120px;
 	height: 120px;
 	cursor: pointer;
+	display: inline-block;
+}
+
+.pubtext {
+	display: inline-block;
+	font-family: "whitney";
+	font-weight: 900;
+	color: black;
+	font-size: 50;
 }
 /* Add a black background color to the top navigation */
 .topnav {
