--- a/public/style.css
+++ b/public/style.css
@@ -51,8 +51,9 @@
 	font-family: "whitney";
 	font-weight: 900;
 	color: black;
-	font-size: 5em;
+	font-size: 4em;
 	text-align: center;
+	margin: auto;
 }
 /* Add a black background color to the top navigation */
 .topnav {
