--- a/public/style.css
+++ b/public/style.css
@@ -119,7 +119,7 @@ tr:nth-child(even) {
 	background-color: #111111;
 }
 /* Style the links inside the navigation bar */
-.topnav a {
+.topnav a,button {
 	background-color: #111;
 	float: left;
 	color: #fff;
@@ -128,7 +128,7 @@ tr:nth-child(even) {
 	text-decoration: none;
 	font-size: 17px;
 }
-.topnav a.right {
+.topnav a,button.right {
 	background-color: #111;
 	float: right;
 	color: #fff;
@@ -138,12 +138,12 @@ tr:nth-child(even) {
 	font-size: 17px;
 }
 /* Change the color of links on hover */
-.topnav a:hover {
+.topnav a,button:hover {
 	background-color: #222;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
+.topnav a,button.active {
 	background-color: DodgerBlue;
 	color: white;
 }
