--- a/public/style.css
+++ b/public/style.css
@@ -29,44 +29,6 @@
 	src: url("whitney/whitney-black.otf") format("opentype");
 }
 
- /* The Modal (background) */
-.modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	left: 0;
-	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-	background-color: #fefefe;
-	margin: 15% auto; /* 15% from the top and centered */
-	padding: 20px;
-	border: 1px solid #888;
-	width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-	color: #aaa;
-	float: right;
-	font-size: 28px;
-	font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-	color: black;
-	text-decoration: none;
-	cursor: pointer;
-} 
-
 .pub {
 	width: 100%;
 	background-color: #ea0000;
@@ -118,7 +80,35 @@ tr:nth-child(even) {
 tr:nth-child(even) {
 	background-color: #111111;
 }
+/* Style the links inside the navigation bar */
+.topnav a {
+	background-color: #111;
+	float: left;
+	color: #fff;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+.topnav a.right {
+	background-color: #111;
+	float: right;
+	color: #fff;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+	background-color: #222;
+}
 
+/* Add a color to the active/current link */
+.topnav a.active {
+	background-color: DodgerBlue;
+	color: white;
+}
 .button {
 	font-family: whitney;
 	font-weight: 500;
